# sqlsaber

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  pytest.ini
.github/: release-please-config.json  release-please-manifest.json
.github/workflows/: publish.yml  release-please.yml  test.yml
docs/: CLAUDE.md  astro.config.mjs  package-lock.json  package.json
docs/public/: robots.txt
docs/src/components/: Hero.svelte  Navigation.svelte
docs/src/pages/: index.astro
docs/src/styles/: global.css
plugins/: README.md
plugins/notebook/: CHANGELOG.md  README.md  pyproject.toml  pytest.ini
plugins/notebook/src/sqlsaber_notebook/: __init__.py  _shared.py  analyst.py  capability.py  cli.py  history.py  prompts.py  rendering.py  result.py  session.py  tools.py
plugins/notebook/src/sqlsaber_notebook/execution/: __init__.py  _files.py  base.py  docker.py  fake.py  microsandbox.py  modal.py
plugins/notebook/tests/: _notebooks.py  test_notebook_analyst.py  test_notebook_capability.py  test_notebook_cli.py  test_notebook_docker.py  test_notebook_docker_integration.py  test_notebook_execution.py  test_notebook_history.py  test_notebook_microsandbox.py  test_notebook_microsandbox_integration.py  test_notebook_modal.py  test_notebook_modal_integration.py  test_notebook_rendering.py  test_notebook_session.py  test_notebook_tools.py
plugins/sandbox/: CHANGELOG.md  pyproject.toml
plugins/sandbox/src/sqlsaber_sandbox/: __init__.py  capability.py  tools.py
plugins/sandbox/tests/: test_sandbox_tools.py
plugins/viz/: CHANGELOG.md  README.md  pyproject.toml
plugins/viz/src/sqlsaber_viz/: __init__.py  capability.py  data_loader.py  prompts.py  spec.py  spec_agent.py  templates.py  tools.py  transforms.py
plugins/viz/src/sqlsaber_viz/renderers/: __init__.py  base.py  html_renderer.py  plotext_renderer.py
plugins/viz/tests/: test_data_loader.py  test_render_plotext.py  test_spec_agent_retry.py  test_spec_validation.py  test_templates.py  test_transforms.py  test_viz_tool.py
src/joinobi/: __init__.py  __main__.py  agent_anthropic.py  config.py  database.py  main.py
src/joinobi/agents/: __init__.py  anthropic.py  base.py  streaming.py
src/joinobi/cli/: __init__.py  commands.py  database.py  display.py  interactive.py  memory.py  models.py  streaming.py
src/joinobi/config/: __init__.py  api_keys.py  database.py  settings.py
src/joinobi/database/: __init__.py  connection.py  schema.py
src/joinobi/memory/: manager.py  storage.py
src/joinobi/models/: __init__.py  types.py
src/sqlsaber/: __init__.py  api.py  artifacts.py  multi_session.py  options.py  overrides.py  query_result_resolution.py  query_results.py  session.py
src/sqlsaber/agents/: anthropic.py  base.py  handoff_agent.py  model_factory.py  multi_database_agent.py  provider_factory.py  pydantic_ai_agent.py
src/sqlsaber/application/: auth_setup.py  db_setup.py
src/sqlsaber/capabilities/: __init__.py  _wrapping.py  (+4 more)
tests/: conftest.py  test_artifacts.py  test_database_resolver.py  test_overrides.py  test_query_results.py  test_release_configuration.py
tests/test_agents/: test_model_factory.py  test_multi_database_agent.py  test_multi_db.py  test_provider_factory.py  test_pydantic_ai_agent.py  test_tool_schemas.py
tests/test_api/: test_database.py  test_knowledge.py  test_multi_database.py  test_options.py  test_system_prompt.py  test_thinking.py  test_threads.py  test_tool_overides.py
tests/test_capabilities/: test_knowledge.py  test_plugin_metadata.py  test_plugins.py  test_sql_tools.py
tests/test_cli/: test_commands.py  test_completers.py  test_database_descriptions.py  test_db_description.py  test_slash_commands.py  test_streaming.py  test_threads.py  test_tui_chat.py  test_usage.py
tests/test_clients/: test_anthropic_client.py
tests/test_config/: test_database.py  test_providers.py  test_settings.py
tests/test_database/: test_connection.py  test_csv_connection.py  test_csv_module.py  test_csvs_connection.py  test_read_only_enforcement.py  test_read_only_hardening.py  test_registry.py  test_schema.py  test_schema_display.py  test_sqlite_module.py
tests/test_knowledge/: test_cli.py  test_knowledge_manager.py  test_models.py  test_sqlite_store.py  test_tool.py
tests/test_theme/: test_manager.py
tests/test_tools/: test_display.py  test_registry.py  test_sql_guard.py  test_sql_guard_security_regressions.py  test_sql_tools.py
tests/threads/: test_threads_manager.py  test_threads_storage.py
(+87 files in other folders)
