[project]
name = "joinobi"
version = "0.1.0"
description = "JoinObi CLI - SQL like Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "typer>=0.16.0",
    "rich>=13.7.0",
    "anthropic>=0.54.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/joinobi"]

[project.scripts]
jb = "joinobi.main:main"
joinobi = "joinobi.main:main"
