[project]
name = "joinobi"
version = "0.1.0"
description = "JoinObi CLI - SQL like Claude Code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "typer>=0.16.0",
    "rich>=13.7.0",
    "anthropic>=0.54.0",
    "keyring>=25.6.0",
    "platformdirs>=4.0.0",
    "questionary>=2.1.0",
    "httpx>=0.28.1",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.21.0",
]

[tool.uv]
dev-dependencies = ["ruff>=0.12.0", "pytest>=8.0.0", "pytest-asyncio>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/joinobi"]

[project.scripts]
jb = "joinobi.cli.commands:main"
joinobi = "joinobi.cli.commands:main"
