[project]
name = "sqlsaber-sandbox"
version = "0.2.0"
description = "SQLsaber sandbox tool plugin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["sqlsaber>=0.54.0", "cased-sandboxes>=0.5.0"]

[project.entry-points."sqlsaber.tools"]
sandbox = "sqlsaber_sandbox:register_tools"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlsaber_sandbox"]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=0.25.0"]
